; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outXmlExpr.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outXmlExpr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"XMLEXPR\00", align 1
@op = common dso_local global i32 0, align 4
@XmlExprOp = common dso_local global i32 0, align 4
@name = common dso_local global i32 0, align 4
@named_args = common dso_local global i32 0, align 4
@arg_names = common dso_local global i32 0, align 4
@args = common dso_local global i32 0, align 4
@xmloption = common dso_local global i32 0, align 4
@XmlOptionType = common dso_local global i32 0, align 4
@type = common dso_local global i32 0, align 4
@typmod = common dso_local global i32 0, align 4
@location = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @_outXmlExpr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_outXmlExpr(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = call i32 @WRITE_NODE_TYPE(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* @op, align 4
  %7 = load i32, i32* @XmlExprOp, align 4
  %8 = call i32 @WRITE_ENUM_FIELD(i32 %6, i32 %7)
  %9 = load i32, i32* @name, align 4
  %10 = call i32 @WRITE_STRING_FIELD(i32 %9)
  %11 = load i32, i32* @named_args, align 4
  %12 = call i32 @WRITE_NODE_FIELD(i32 %11)
  %13 = load i32, i32* @arg_names, align 4
  %14 = call i32 @WRITE_NODE_FIELD(i32 %13)
  %15 = load i32, i32* @args, align 4
  %16 = call i32 @WRITE_NODE_FIELD(i32 %15)
  %17 = load i32, i32* @xmloption, align 4
  %18 = load i32, i32* @XmlOptionType, align 4
  %19 = call i32 @WRITE_ENUM_FIELD(i32 %17, i32 %18)
  %20 = load i32, i32* @type, align 4
  %21 = call i32 @WRITE_OID_FIELD(i32 %20)
  %22 = load i32, i32* @typmod, align 4
  %23 = call i32 @WRITE_INT_FIELD(i32 %22)
  %24 = load i32, i32* @location, align 4
  %25 = call i32 @WRITE_LOCATION_FIELD(i32 %24)
  ret void
}

declare dso_local i32 @WRITE_NODE_TYPE(i8*) #1

declare dso_local i32 @WRITE_ENUM_FIELD(i32, i32) #1

declare dso_local i32 @WRITE_STRING_FIELD(i32) #1

declare dso_local i32 @WRITE_NODE_FIELD(i32) #1

declare dso_local i32 @WRITE_OID_FIELD(i32) #1

declare dso_local i32 @WRITE_INT_FIELD(i32) #1

declare dso_local i32 @WRITE_LOCATION_FIELD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
